--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ python:
 #             - python3-numpy
 #             - python3-scipy
 install:
-    - sudo apt-get install build-essential libatlas3gf-dev libatlas-dev python3-dev python3-setuptools python3-numpy python3-scipy
+    - sudo apt-get install build-essential libatlas3g-dev libatlas-dev python3-dev python3-setuptools python3-numpy python3-scipy
     - pip3 install scikit-learn
     - make
 script:
