--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,12 @@ python:
 #             - python3-setuptools
 #             - python3-numpy
 #             - python3-scipy
+virtualenv:
+  system_site_packages: true
+before_install:
+    - sudo apt-get update
+    - sudo apt-get install -qq build-essential libatlas-dev python3-dev python3-setuptools python3-numpy python3-scipy
 install:
-    - sudo apt-get install build-essential libatlas-dev python3-dev python3-setuptools python3-numpy python3-scipy
     - pip3 install scikit-learn
     - make
 script:
