--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,13 @@ python:
 virtualenv:
   system_site_packages: true
 before_install:
+    - deactivate
+    - virtualenv --system-site-packages ~/virtualenv/this
+    - source ~/virtualenv/this/bin/activate
     - sudo apt-get update
     - sudo apt-get install -qq build-essential libatlas-dev python3-dev python3-setuptools python3-numpy python3-scipy
-install:
     - pip3 install scikit-learn
+install:
     - make
 script:
     - cd app/test
