--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,23 @@ python:
 #             - python3-numpy
 #             - python3-scipy
 virtualenv:
-  system_site_packages: true
+    system_site_packages: true
 before_install:
-    - deactivate
-    - virtualenv --system-site-packages ~/virtualenv/this
-    - source ~/virtualenv/this/bin/activate
-    - sudo apt-get update
-    - sudo apt-get install -qq build-essential libatlas-dev python3-dev python3-setuptools python3-numpy python3-scipy
+    - sudo apt-get update -qq
+    - sudo apt-get install -qq build-essential libatlas-dev libatlas-base-dev liblapack-dev gfortran
+    - sudo apt-get install -qq python3-dev python3-setuptools #python3-numpy python3-scipy
+    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+    - chmod +x miniconda.sh
+    - ./miniconda.sh -b
+    - export PATH=/home/travis/miniconda/bin:$PATH
+    - conda update --yes conda
+    - travis_retry conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy scipy matplotlib
     - pip3 install scikit-learn
 install:
     - make
 script:
     - cd app/test
     - py.test-3
+notifications:
+    slack: io-touchpad:Fv8xkXiL4PSbXN8GN9hDAlxp
 
