--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ python:
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -qq build-essential libatlas-dev libatlas-base-dev liblapack-dev gfortran
-    - sudo apt-get install -qq python3-dev python3-setuptools #python3-numpy python3-scipy
-    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-    - chmod +x miniconda.sh
-    - ./miniconda.sh -b
-    - export PATH=/home/travis/miniconda/bin:$PATH
-    - conda update --yes conda
-    - travis_retry conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy scipy matplotlib
+    - sudo apt-get install -qq python3-dev python3-setuptools python3-numpy python3-scipy
+    # - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x87_64.sh -O miniconda.sh
+    # - chmod +x miniconda.sh
+    # - ./miniconda.sh -b
+    # - export PATH=/home/travis/miniconda/bin:$PATH
+    # - conda update --yes conda
+    # - travis_retry conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy scipy matplotlib
     - pip3 install scikit-learn
 install:
     - make
