--- a/.travis.yml
+++ b/.travis.yml
@@ -2,30 +2,25 @@ language: python
 python:
     - "3.4"
     - "3.5"
-# addons:
-#     apt:
-#         packages:
-#             - build-essential
-#             - libatlas-dev
-#             - libatlas3gf-base # Should be libatlas3gf-base.
-#             - python3-dev
-#             - python3-setuptools
-#             - python3-numpy
-#             - python3-scipy
-# virtualenv:
-#     system_site_packages: true
+addons:
+    apt:
+        packages:
+            - build-essential
+            - libatlas-dev
+            - liblapack-dev
+            - gfortran
+            - python3-dev
+            # - python3-setuptools
+            - python3-numpy
+            - python3-scipy
 before_install:
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq build-essential libatlas-dev libatlas-base-dev liblapack-dev gfortran
-    - sudo apt-get install -qq python3-dev python3-setuptools python3-numpy python3-scipy
-    # - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x87_64.sh -O miniconda.sh
-    # - chmod +x miniconda.sh
-    # - ./miniconda.sh -b
-    # - export PATH=/home/travis/miniconda/bin:$PATH
-    # - conda update --yes conda
-    # - travis_retry conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy scipy matplotlib
-    - pip3 install scikit-learn
+    - pip install -U pip setuptools wheel
+    # - sudo apt-get update -qq
+    # - sudo apt-get install -qq build-essential libatlas-dev libatlas-base-dev liblapack-dev gfortran
+    # - sudo apt-get install -qq python3-dev python3-setuptools python3-numpy python3-scipy
+    # - pip3 install scikit-learn
 install:
+    - travis_wait travis_retry pip install -r requirements.txt
     - make
 script:
     - cd app/test
