--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
     - make
 script:
     - cd app/test
-    - py.test-3
+    - py.test
 notifications:
     slack: io-touchpad:Fv8xkXiL4PSbXN8GN9hDAlxp
     email: false
