--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ python:
 addons:
     apt:
         packages:
-            - build-essential
+            # - build-essential
             - libatlas-dev
             - liblapack-dev
             - gfortran
-            - python3-dev
-            - python3-numpy
-            - python3-scipy
+            # - python3-dev
+            # - python3-numpy
+            # - python3-scipy
 before_install:
     - pip install -U pip setuptools wheel
 install:
